--- a/python/runs/R3/sweep.yaml
+++ b/python/runs/R3/sweep.yaml
@@ -1,10 +1,10 @@
 program: training.py 
 command:
-  - /Users/sigge/miniforge3/envs/tf-finance/bin
-  - ${interpreter}
-  - ${program}
-  - "--conv_start --collector=C1 --period=1y --interval=1d --start=2020.11.05 --stop=2021.11.05"
-  - ${args}
+  - /Users/sigge/miniforge3/envs/tf-finance/bin # ${env}
+  - ${interpreter} # ${interpreter}
+  - ${program} # ${program}
+  - "--conv_start --collector=C1 --period=1y --interval=1d --start=2020.11.05 --stop=2021.11.05" # Dataset arguments
+  - ${args} # ${args}
 method: bayes
 metric:
   name: val_loss
@@ -21,7 +21,7 @@ parameters:
     values: [1, 2, 4, 8, 16, 32, 64, 128, 256]
   # Set the data length to be constant because otherwise for conv_kernel_size, we will have no
   # idea of what the maximum value should be
-  # data_length:
+  # data_length: DO NOT USE THIS; AS IT WILL NOT WORK WHEN data_length < conv_kernel_size
   #   distribution: int_uniform
   #   min: 2
   #   max: 60
